# A8E

./: .cproject  .gitignore  .project  6502.c  6502.h  A8E.c  AGENTS.md  Antic.c  Antic.h  AtariIo.c  AtariIo.h  CHANGELOG.md  CMakeLists.txt  COLOR_CLOCK_ACCURACY.md  Gtia.c  Gtia.h  NOTES.md  Pia.c  Pia.h  Pokey.c  Pokey.h  README.md  archon2.atr  d1.atr  image.xex
.claude/: launch.json  settings.local.json
.github/workflows/: build.yml  deploy-jsa8e-dev.yml  deploy-jsa8e.yml  update-jsa8e-version.yml
A8E/: .clang-format  6502.c  6502.h  A8E.c  Antic.c  Antic.h  AtariIo.c  AtariIo.h  CMakeLists.txt  Gtia.c  Gtia.h  Pia.c  Pia.h  Pokey.c  Pokey.h  README.md
A8E/tests/: antic_dma_probe.c  antic_graphics_modes_probe.c  antic_timing_probe.c  pokey_pot_scan_probe.c
AHRM/: INDEX.md  index.md
AHRM/0. Front Matter/: Front Matter.md
AHRM/1. Introduction/: 1. Introduction.md  2. Conventions in this manual.md  3. What's new in this edition.md  4. Concepts.md
AHRM/10. Disk drives/: 1. Introduction.md  10. 810 hardware.md  11. Happy 810.md  12. 810 Turbo.md  13. 815 disk drive.md  14. 815 hardware.md  15. 1050 disk drive.md  16. 1050 hardware.md  17. 1450XLD disk drive.md  18. 1450XLD disk hardware.md  19. US Doubler.md  2. Basic protocol.md  20. Super Archiver.md  21. Happy 1050.md  22. I.S. Plate.md  23. XF551 disk drive.md  24. XF551 hardware.md  25. Speedy XF disk drive.md  26. Indus GT disk drive.md  27. Indus GT hardware.md  28. ATR8000 hardware.md  29. Percom RFD.md  3. Extended protocols.md  30. Percom AT88.md  31. Percom AT88-SPD-S1PD.md  32. Amdek AMDC-I-II.md  4. Commands.md  5. Timing.md  6. Anomalies.md  7. 6532 RIOT.md  8. 177X-179X-279X FDC.md  9. 810 disk drive.md  Disk drives.md
AHRM/11. Parallel Bus Interface/: 1. Introduction.md  2. Common memory map.md  3. ICD Multi I-O (MIO).md  4. CSS Black Box.md  5. CSS Black Box Floppy Board.md  6. Atari 1090 80 Column Video Card.md  7. Atari 1400XL-1450XLD.md  Parallel Bus Interface.md
AHRM/12. Internal devices/: 1. Introduction.md  2. Covox.md  3. Ultimate1MB.md  4. VideoBoard XE.md  5. APE Warp+ OS 32-in-1.md  6. Bit-3 Full-View 80.md  Internal devices.md
AHRM/13. 5200 SuperSystem/: 1. Introduction.md  2. Differences from the 8-bit computer line.md  3. Controller.md  4. 5200 Memory map.md  5200 SuperSystem.md
AHRM/14. Reference/: 1. Memory map.md  2. Register list.md  3. GTIA registers.md  4. POKEY registers.md  5. PIA registers.md  6. ANTIC registers.md  7. Register listing.md  Reference.md
AHRM/15. Bibliography/: 1. List of references.md  2. Errata.md  3. Printers.md  Bibliography.md
AHRM/2. System Architecture/: 1. Basic architecture.md  10. Further reading.md  2. Clocks.md  3. Memory system.md  4. System Reset button.md  5. Peripheral Interface Adapter (PIA).md  6. Bank switching.md  7. Extended memory.md  8. Miscellaneous connections.md  9. Examples.md  System Architecture.md
AHRM/3. CPU/: 1. Flags.md  10. Further reading.md  2. Decimal mode.md  3. Cycle timing.md  4. Interrupts.md  5. Undocumented instructions.md  6. 65C02 compatibility.md  7. 65C816 compatibility.md  8. 65C816 new features.md  9. Examples.md  CPU.md
AHRM/4. ANTIC/: 1. Basic operation.md  10. VCOUNT.md  11. Playfield DMA.md  12. Abnormal playfield DMA.md  13. Player-missile DMA.md  14. Scan line timing.md  15. Cycle counting example.md  16. Examples.md  17. Further reading.md  2. Display timing.md  3. Playfield.md  4. Character modes.md  5. Mapped (bitmap) modes.md  6. Display list.md  7. Scrolling.md  8. Non-maskable interrupts.md  9. WSYNC.md  ANTIC.md
AHRM/5. POKEY/: 1. Addressing.md  10. Examples.md  11. Further reading.md  2. Initialization.md  3. Sound generation.md  4. Clock generation.md  5. Noise generators.md  6. Serial port.md  7. Interrupts.md  8. Keyboard scan.md  9. Paddle scan.md  POKEY.md
AHRM/6. CTIA-GTIA/: 1. System role.md  10. Cycle timing.md  11. General purpose I-O.md  12. Further reading.md  2. Display generation.md  3. Color encoding.md  4. Artifacting.md  5. Player-missile graphics.md  6. Collision detection.md  7. Priority control.md  8. High resolution modes.md  9. GTIA special modes.md  CTIA-GTIA.md
AHRM/7. Accessories/: 1. Joystick.md  10. XEP80 Interface Module.md  11. Corvus Disk System.md  12. ComputerEyes Video Acquisition System.md  2. Paddle.md  3. Mouse.md  4. Light Pen-Gun.md  5. CX-75 Light Pen.md  6. Stack Lightpen.md  7. CX-85 Numerical Keypad.md  8. CX-20 Driving Controller.md  9. CX-21-23-50 Keyboard Controller.md  Accessories.md
AHRM/8. Cartridges/: 1. Cartridge slot.md  10. The Multiplexer.md  2. Atarimax flash cartridges.md  3. Atarimax MyIDE-II.md  4. SIC!.md  5. SIDE 1 - SIDE 2.md  6. SIDE 3.md  7. Corina.md  8. R-Time 8.md  9. Veronica.md  Cartridges.md
AHRM/9. Serial I-O (SIO) Bus/: 1. Basic SIO protocol.md  10. 850 Interface Module.md  11. 835 Modem.md  12. 835 Hardware.md  13. 1030 Modem.md  14. 1030 Hardware.md  15. SX212 Modem.md  16. R-Verter.md  17. 410-1010 Program Recorder.md  18. MidiMate.md  19. Pocket Modem.md  2. Poll Commands.md  3. 820 40 Column Printer.md  4. 820 Hardware.md  5. 1020 Color Printer.md  6. 1025 80 Column Printer.md  7. 1025 Hardware.md  8. 1029 Programmable Printer.md  9. 1029 Hardware.md  Serial I-O (SIO) Bus.md
AHRM/A. Polynomial Counters/: Polynomial Counters.md
AHRM/B. Physical Disk Format/: 1. Raw geometry.md  2. Bit encoding.md  3. Address field.md  4. Data field.md  5. CRC algorithm.md  Physical Disk Format.md
AHRM/C. Physical Tape Format/: 1. Signal encoding.md  2. Framing.md  3. FSK demodulation.md  4. Zero crossing detection.md  5. Peak detection.md  6. DFT detection.md  (+3 more)
implementation/: NOTES.md
jsA8E/: AUTOMATION.md  README.md  emulator_worker.js  eslint.config.cjs  headless.js  index.html  investigate_image_xex.js  investigate_schraenker3.js  investigate_schraenker3_v2.js  investigate_schraenker3_v3.js  investigate_schraenker3_v4.js  investigate_schraenker3_v5.js  investigate_schraenker3_v6.js  mcp_server.js  package-lock.json  package.json  style.css  test_seawolf2.js
jsA8E/js/: atari.js  (+6 more)
legacy/: COLOR_CLOCK_ACCURACY.md
(+157 files in other folders)
